--- a/CodePanel/App.config
+++ b/CodePanel/App.config
@@ -1,6 +1,45 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="CodePanel.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
+    <applicationSettings>
+        <CodePanel.Properties.Settings>
+            <setting name="wrongPasswordTimeout" serializeAs="String">
+                <value>10</value>
+            </setting>
+            <setting name="cameraPasswords" serializeAs="Xml">
+                <value>
+                    <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+                        xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+                        <string>1111</string>
+                    </ArrayOfString>
+                </value>
+            </setting>
+            <setting name="androidPasswords" serializeAs="Xml">
+                <value>
+                    <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+                        xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+                        <string>9999</string>
+                        <string>8888</string>
+                        <string>7777</string>
+                        <string>6666</string>
+                    </ArrayOfString>
+                </value>
+            </setting>
+            <setting name="vaultPasswords" serializeAs="Xml">
+                <value>
+                    <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+                        xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+                        <string>2222</string>
+                    </ArrayOfString>
+                </value>
+            </setting>
+        </CodePanel.Properties.Settings>
+    </applicationSettings>
 </configuration>
