visual redisign added fake progress default timeout changed to 7 sec

--- a/CodePanel/CodePanel.csproj
+++ b/CodePanel/CodePanel.csproj
@@ -53,6 +53,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="StringLengthCheckConverter.cs" />
     <Compile Include="PasswordBox.xaml.cs">
       <DependentUpon>PasswordBox.xaml</DependentUpon>
     </Compile>
@@ -76,6 +77,10 @@
       <SubType>Code</SubType>
     </Compile>
     <Page Include="PasswordBox.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="ProgressBarStyle.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
