success grid and success messages cleaned progressbar style resources

--- a/CodePanel/App.config
+++ b/CodePanel/App.config
@@ -40,6 +40,15 @@
                     </ArrayOfString>
                 </value>
             </setting>
+            <setting name="cameraSuccessMessage" serializeAs="String">
+                <value>Защита контура наблюдения снята/Включить экран</value>
+            </setting>
+            <setting name="vaultSuccessMessage" serializeAs="String">
+                <value>Доступ в хранилище разрешен/Под столом в левом углу</value>
+            </setting>
+            <setting name="androidSuccessMessage" serializeAs="String">
+                <value>Сигнал управления перехвачен/Починка робота-разведчика</value>
+            </setting>
         </CodePanel.Properties.Settings>
     </applicationSettings>
 </configuration>
