changed base windows size to fit ASUS tablet screen fixed all sizes and margins progress windows is semi-transparent

--- a/CodePanel/App.config
+++ b/CodePanel/App.config
@@ -47,7 +47,7 @@
                 <value>Доступ в хранилище разрешен/Под столом в левом углу</value>
             </setting>
             <setting name="androidSuccessMessage" serializeAs="String">
-                <value>Сигнал управления перехвачен/Починка робота-разведчика</value>
+                <value>Сигнал управления перехвачен/Ремонт робота-разведчика</value>
             </setting>
         </CodePanel.Properties.Settings>
     </applicationSettings>
