--- a/CodePanel/Properties/Settings.settings
+++ b/CodePanel/Properties/Settings.settings
@@ -33,7 +33,7 @@
       <Value Profile="(Default)">Доступ в хранилище разрешен/Под столом в левом углу</Value>
     </Setting>
     <Setting Name="androidSuccessMessage" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">Сигнал управления перехвачен/Починка робота-разведчика</Value>
+      <Value Profile="(Default)">Сигнал управления перехвачен/Ремонт робота-разведчика</Value>
     </Setting>
   </Settings>
 </SettingsFile>
