Preventing PC from going to powersaving while app is active fixed codes

--- a/CodePanel/App.config
+++ b/CodePanel/App.config
@@ -17,7 +17,8 @@
                 <value>
                     <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
                         xmlns:xsd="http://www.w3.org/2001/XMLSchema">
-                        <string>1111</string>
+                        <string>0138</string>
+                        <string>0985</string>
                     </ArrayOfString>
                 </value>
             </setting>
@@ -25,10 +26,10 @@
                 <value>
                     <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
                         xmlns:xsd="http://www.w3.org/2001/XMLSchema">
-                        <string>9999</string>
-                        <string>8888</string>
-                        <string>7777</string>
-                        <string>6666</string>
+                        <string>6585</string>
+                        <string>0975</string>
+                        <string>1247</string>
+                        <string>3276</string>
                     </ArrayOfString>
                 </value>
             </setting>
@@ -36,7 +37,8 @@
                 <value>
                     <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
                         xmlns:xsd="http://www.w3.org/2001/XMLSchema">
-                        <string>2222</string>
+                        <string>9385</string>
+                        <string>4851</string>
                     </ArrayOfString>
                 </value>
             </setting>
@@ -44,7 +46,7 @@
                 <value>Защита контура наблюдения снята/Включить экран</value>
             </setting>
             <setting name="vaultSuccessMessage" serializeAs="String">
-                <value>Доступ в хранилище разрешен/Под столом в левом углу</value>
+                <value>Доступ в хранилище разрешен/Под столом у окна</value>
             </setting>
             <setting name="androidSuccessMessage" serializeAs="String">
                 <value>Сигнал управления перехвачен/Ремонт робота-разведчика</value>
