--- a/CodePanel/Properties/Settings.settings
+++ b/CodePanel/Properties/Settings.settings
@@ -8,29 +8,31 @@
     <Setting Name="cameraPasswords" Type="System.String[]" Scope="Application">
       <Value Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
 &lt;ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;string&gt;1111&lt;/string&gt;
+  &lt;string&gt;0138&lt;/string&gt;
+  &lt;string&gt;0985&lt;/string&gt;
 &lt;/ArrayOfString&gt;</Value>
     </Setting>
     <Setting Name="androidPasswords" Type="System.String[]" Scope="Application">
       <Value Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
 &lt;ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;string&gt;9999&lt;/string&gt;
-  &lt;string&gt;8888&lt;/string&gt;
-  &lt;string&gt;7777&lt;/string&gt;
-  &lt;string&gt;6666&lt;/string&gt;
+  &lt;string&gt;6585&lt;/string&gt;
+  &lt;string&gt;0975&lt;/string&gt;
+  &lt;string&gt;1247&lt;/string&gt;
+  &lt;string&gt;3276&lt;/string&gt;
 &lt;/ArrayOfString&gt;</Value>
     </Setting>
     <Setting Name="vaultPasswords" Type="System.String[]" Scope="Application">
       <Value Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
 &lt;ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;string&gt;2222&lt;/string&gt;
+  &lt;string&gt;9385&lt;/string&gt;
+  &lt;string&gt;4851&lt;/string&gt;
 &lt;/ArrayOfString&gt;</Value>
     </Setting>
     <Setting Name="cameraSuccessMessage" Type="System.String" Scope="Application">
       <Value Profile="(Default)">Защита контура наблюдения снята/Включить экран</Value>
     </Setting>
     <Setting Name="vaultSuccessMessage" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">Доступ в хранилище разрешен/Под столом в левом углу</Value>
+      <Value Profile="(Default)">Доступ в хранилище разрешен/Под столом у окна</Value>
     </Setting>
     <Setting Name="androidSuccessMessage" Type="System.String" Scope="Application">
       <Value Profile="(Default)">Сигнал управления перехвачен/Ремонт робота-разведчика</Value>
